horizontal scrollbar on mobile device with previous check, checking to see if error is resolved by deploying to view via phone

--- a/css/index.css
+++ b/css/index.css
@@ -252,7 +252,7 @@ body #mainheader {
   margin: 3rem 7rem;
   justify-content: center;
   align-items: center;
-  padding: 5rem 5rem;
+  padding: 5rem;
   text-align: left;
 }
 @media (max-width: 800px) {
@@ -338,10 +338,7 @@ body #mainheader #mock {
   body #mainheader #mock {
     align-items: center;
     width: 100%;
-    padding: 5rem;
-  }
-  body #mainheader #mock img {
-    width: 40%;
+    padding: 4rem;
   }
 }
 #about {
