--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,7 +10,7 @@ body {
         margin: 3rem 7rem;
         justify-content: center;
         align-items: center;
-        padding: 5rem 5rem;
+        padding: 5rem;
         text-align: left;
 
 
@@ -105,10 +105,7 @@ body {
             @media @tablet {
                 align-items: center;
                 width: 100%;
-                padding: 5rem;
-                img {
-                    width: 40%;
-                }
+                padding: 4rem;
             }
         }
     }
